add jdk option --enable-native-access=ALL-UNNAMED to manifest and launcher scripts to suppress newer JDK warning about JNI/JNA calling native libraries